2006-11-15  Akim Demaille  <akim.demaille@gmail.com>

	Make svn bits more alike to prepare factoring
	* build-aux.mk: Do that based on libport bits.

2006-11-15  Akim Demaille  <akim.demaille@gmail.com>

	More reindent
	* reindent: Use libport/cstring.

2006-11-15  Akim Demaille  <akim.demaille@gmail.com>

	Improve reindent to catch common patterns to factor
	* reindent: Also handle comments on the same line as the
	brace.
	strcmp == 0 -> STREQ.

2006-11-13  SIGOURE Benoit  <sigoure.benoit@lrde.epita.fr>

	Improve detection of qscintilla2.
	* autotroll.m4: Make more robust.
	* qscintilla2.m4: Use a Makefile when building the test application to
          see whether qscintilla2 is working or not.

2006-11-13  SIGOURE Benoit  <sigoure.benoit@lrde.epita.fr>

	Fix the compilation test for qscintilla2.
	* qscintilla2.m4: Place conftest.cpp -o conftest$EXEEXT before the
          LDFLAGS and LIBS.

2006-11-13  SIGOURE Benoit  <sigoure.benoit@lrde.epita.fr>

	Add a work-around for Windows.
	* qscintilla2.m4: #undef main if necessary.

2006-11-13  Akim Demaille  <akim.demaille@free.fr>

	Add check.mk
	* check.mk: New, from Vaucanson.
	* test.sh: Use a banner when reporting files.

2006-11-09  SIGOURE Benoit  <sigoure.benoit@lrde.epita.fr>

	AC_SUBST QSCINTILLA2_LDFLAGS.
	* qscintilla2.m4: Here.

2006-11-09  SIGOURE Benoit  <sigoure.benoit@lrde.epita.fr>

	Add a macro to detect QScintilla2.
	* qscintilla2.m4: New. Defines the macro WITH_QSCINTILLA2. The way I
          find libqscintilla2 seem rather fragile.

2006-11-07  Akim Demaille  <demaille@gostai.com>

	More posix -> engine
	* urbi-dirs.m4: here.

2006-11-07  Akim Demaille  <demaille@gostai.com>

	posix -> engine
	* urbi-dirs.m4: Expect engine, not posix as an urbi_env.

2006-11-07  Akim Demaille  <demaille@gostai.com>

	nostdinc
	* urbi-engine.ac: Pass it to Automake.

2006-11-07  Akim Demaille  <demaille@gostai.com>

	Execute URBI_LIBPORT earlier
	* urbi-engine.ac: to catch cmd line error earlier.
